--- a/frontendAKGtool/app/views/main.scala.html
+++ b/frontendAKGtool/app/views/main.scala.html
@@ -1,15 +1,89 @@
 @(title: String)(content: Html)
+@import helper._
+@import helper.twitterBootstrap._
 
 <!DOCTYPE html>
 
 <html>
     <head>
         <title>@title</title>
+        <!-- <link href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" rel="stylesheet" media="screen"> -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
+        <!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")">
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap-theme.min.css")">
+		<!--  JQuery scripts - needed by the bootstrap js content -->
+		<script src="@routes.Assets.at("javascripts/jquery-1.11.2.min.js")"></script>
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
     </head>
     <body>
+    	<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+		    <!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		      <a class="navbar-brand" href="http://www.akg.krakow.pl/">
+		        <img  alt="Brand" src="@routes.Assets.at("images/akgSm.png")">
+		      </a>  
+		      <a class="navbar-brand" href="#"><b>AKG</b>tool</a>
+		    </div>
+		
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      <ul class="nav navbar-nav">
+		      	<li><a href="/">Home</a></li>
+		        <li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Users <span class="caret"></span></a>
+		          <ul class="dropdown-menu" role="menu">
+		            <li><a href="#">Add user</a></li>
+		            <li class="divider"></li>
+		            <li><a href="/users">Display all users</a></li>
+		          </ul>
+		        </li>
+		      </ul>
+		      <form class="navbar-form navbar-left" role="search">
+		        <div class="form-group">
+		          <input type="text" class="form-control" placeholder="Search">
+		        </div>
+		        <button type="submit" class="btn btn-default">Submit</button>
+		      </form>
+		      <ul class="nav navbar-nav navbar-right">
+		        <li><a href="#">Link</a></li>
+		        <li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+		          <ul class="dropdown-menu" role="menu">
+		            <li><a href="#">Action</a></li>
+		            <li><a href="#">Another action</a></li>
+		            <li><a href="#">Something else here</a></li>
+		            <li class="divider"></li>
+		            <li><a href="#">Separated link</a></li>
+		          </ul>
+		        </li>
+		      </ul>
+		    </div><!-- /.navbar-collapse -->
+		  </div><!-- /.container-fluid -->
+		</nav>
+    
+    	@if(flash.containsKey("success")){
+		<div class="alert alert-success">
+		@flash.get("success")
+		</div>
+		}
+		@if(flash.containsKey("error")){
+		<div class="alert alert-error">
+		@flash.get("error")
+		</div>
+		}
         @content
+        <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
