--- a/frontendAKGtool/app/views/index.scala.html
+++ b/frontendAKGtool/app/views/index.scala.html
@@ -5,7 +5,7 @@
 	<div>
 		<br>
 	    <h1 align="center">Welcome to <b>AKG</b>tool web client!</h1>
-	    <p align="center">System for sports clubs managing. For more information how to use it read pleas the system documentation.</p>
+	    <p align="center">System for sports clubs managing. For more information how to use it please read the system documentation.</p>
 	    <br>
 	    <p align="center"><img ismap src="@routes.Assets.at("images/akgLogo.jpg")" align="center"></p>
 	</div>
