commit 20150207 Save to api - working!

--- a/frontendAKGtool/app/views/index.scala.html
+++ b/frontendAKGtool/app/views/index.scala.html
@@ -1,16 +1,17 @@
-@(message: String)
-
-@main("Welcome to Play") {
+@main("Welcome to AKGtool") {
 
 	<div>
 		<br>
 	    <h1 align="center">Welcome to <b>AKG</b>tool web client!</h1>
-	    <p align="center">System for sports clubs managing. For more information how to use it please read the system documentation.</p>
+	    <p align="center">System for sport clubs managing. For more how to use information - please read the system documentation.</p>
 	    <br>
 	    <p align="center"><img ismap src="@routes.Assets.at("images/akgLogo.jpg")" align="center"></p>
+	   
 	</div>
     <div>
     
     </div>
 
 }
+
+<!--  @@Author(name="Lukas Pecak") -->
