--- a/frontendAKGtool/app/views/users/userDetails.scala.html
+++ b/frontendAKGtool/app/views/users/userDetails.scala.html
@@ -4,7 +4,7 @@
 
 @main("User form"){
 	<div class="container col-md-offset-2">
-		<h1>User form</h1>
+		<h1 align="center">User form</h1>
 		@helper.form(action = routes.Users.saveUser(), 'enctype -> "multipart/form-data") {
 			<fieldset>
 				<legend>User - @userForm("firstName").valueOr("new") @userForm("lastName").valueOr("")</legend>
@@ -14,14 +14,11 @@
 				@helper.inputText(userForm("peselNr"), '_label -> "Pesel number")
 				@helper.inputText(userForm("idCardNr"), '_label -> "Id card number")
 				@helper.inputText(userForm("feeStatus"), '_label -> "Fee status")
-				@helper.inputText(userForm("houersPoints"), '_label -> "Houers points")
+				@helper.inputText(userForm("hoursPoints"), '_label -> "Houers points")
 			</fieldset>
 			<input type="submit" class="btn btn-primary" value="Save">
 		}
 	</div>
-	
-	
-
-
-
 }
+
+<!--  @@Author(name="Lukas Pecak") -->
