--- a/frontendAKGtool/app/views/users/usersList.scala.html
+++ b/frontendAKGtool/app/views/users/usersList.scala.html
@@ -18,7 +18,8 @@ function del(urlToDelete) {
 </script>
 
 <div class="container">
-<h2>List of users</h2>
+<h1 align="center">List of users</h1>
+<br>
 <table class="table table-striped">
 <thead>
 <tr>
@@ -40,11 +41,12 @@ function del(urlToDelete) {
 	<td>@user.peselNr</td>
 	<td>@user.idCardNr</td>
 	<td>@user.feeStatus</td>
-	<td>@user.houersPoints</td>
+	<td>@user.hoursPoints</td>
 	<td>
 
 </td>
 </tr>
 }
-
 }
+
+<!--  @@Author(name="Lukas Pecak") -->
