--- a/frontendAKGtool/app/views/main.scala.html
+++ b/frontendAKGtool/app/views/main.scala.html
@@ -21,7 +21,23 @@
 		<script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
     </head>
     <body>
-    	<nav class="navbar navbar-default">
+    	@if(flash.containsKey("success")){
+		<div class="alert alert-success">
+		@flash.get("success")
+		</div>
+		}
+		@if(flash.containsKey("error")){
+		<div class="alert alert-danger">
+		@flash.get("error")
+		</div>
+		}
+		@if(flash.containsKey("warning")){
+		<div class="alert alert-warning">
+		@flash.get("warning")
+		</div>
+		}
+		
+  		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
@@ -34,7 +50,7 @@
 		      <a class="navbar-brand" href="http://www.akg.krakow.pl/">
 		        <img  alt="Brand" src="@routes.Assets.at("images/akgSm.png")">
 		      </a>  
-		      <a class="navbar-brand" href="#"><b>AKG</b>tool</a>
+		      <a class="navbar-brand" href="http://www.akg.krakow.pl/"><b>AKG</b>tool</a>
 		    </div>
 		
 		    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -44,31 +60,26 @@
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Users <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
-		            <li><a href="/users/new">Add user</a></li>
+		            <li><a href="/users/new">Add user</a></li><!-- Adding new user -->
 		            <li class="divider"></li>
-		            <li><a href="/users">Display all users</a></li>
+		            <li><a href="/users">Display all users</a></li><!-- Displaying the users List -->
 		          </ul>
 		        </li>
 		      </ul>
 		      
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="/users/singin"><button>Sign in</button></a></li>
+		        <li><a href="/users/singin"><button>Sign in</button></a></li><!-- User authentication -->
+		        <li><a href="/settings"><i class="glyphicon glyphicon-wrench"></i></a></li><!-- Displaying the settings panel -->
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
-    
-    	@if(flash.containsKey("success")){
-		<div class="alert alert-success">
-		@flash.get("success")
-		</div>
-		}
-		@if(flash.containsKey("error")){
-		<div class="alert alert-error">
-		@flash.get("error")
-		</div>
-		}
+		
+		
+   
         @content
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
+
+<!--  @@Author(name="Lukas Pecak") -->
