--- a/frontendAKGtool/app/views/users/signIn.scala.html
+++ b/frontendAKGtool/app/views/users/signIn.scala.html
@@ -4,7 +4,7 @@
 
 @main("User form"){
 	<div class="container col-md-offset-2">
-		<h1>User account</h1>
+		<h1 align="center">User account</h1>
 		@helper.form(action = routes.Users.verifyUser(), 'enctype -> "multipart/form-data") {
 			<fieldset>
 				<legend>Sign in:</legend>
@@ -14,9 +14,6 @@
 			<input type="submit" class="btn btn-primary" value="Sing in">
 		}
 	</div>
-	
-	
-
-
-
 }
+
+<!--  @@Author(name="Lukas Pecak") -->
