--- a/frontendAKGtool/app/views/users/signIn.scala.html
+++ b/frontendAKGtool/app/views/users/signIn.scala.html
@@ -7,7 +7,7 @@
 		<h1 align="center">User account</h1>
 		@helper.form(action = routes.Users.verifyUser(), 'enctype -> "multipart/form-data") {
 			<fieldset>
-				<legend>Sign in:</legend>
+				<legend><i class="glyphicon glyphicon-user"></i>&nbsp&nbspSign in:</legend>
 				@helper.inputText(userAccountForm("userName"), '_label -> "User name")
 				@helper.inputPassword(userAccountForm("passwordHash"), '_label -> "Password")		
 			</fieldset>
