--- a/frontendAKGtool/app/views/users/usersList.scala.html
+++ b/frontendAKGtool/app/views/users/usersList.scala.html
@@ -49,9 +49,9 @@ function del(urlToDelete) {
 	-->
 	<td>
 		&nbsp&nbsp
-		<a href="#">
+		<a href="@routes.Users.editUser(user._id)">
 		<i class="glyphicon glyphicon-pencil"></i></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-		<a >
+		<a href="@routes.Users.deleteUser(user._id)">
 		<i class="glyphicon glyphicon-remove"></i></a>
 	</td>
 </tr>
