--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,9 +1,9 @@
-@main("Welcome to AKGtool") {
-
+@main("Witamy w AKGtool !") {
+	<meta charset="UTF-8">
 	<div>
 		<br>
-	    <h1 align="center">Welcome to <b>AKG</b>tool web client!</h1>
-	    <p align="center">System for sport clubs managing. For more how to use information - please read the system documentation.</p>
+	    <h1 align="center">Witamy w kliencie webowym <b>AKG</b>tool !</h1>
+	    <p align="center">System zarządzania akademickimi klubami sportowymi. Aby uzyskać informacje o funkcjach systemu - prosimy o zapoznanie się z jego dokumentacją.</p>
 	    <br>
 	    <p align="center"><img ismap src="@routes.Assets.at("images/akgLogo.jpg")" align="center"></p>
 	   
@@ -13,5 +13,6 @@
     </div>
 
 }
+
 
 <!--  @@Author(name="Lukas Pecak") -->
