--- a/app/views/courses/courseDetails.scala.html
+++ b/app/views/courses/courseDetails.scala.html
@@ -1,26 +1,77 @@
-@(courseForm: Form[Course])
+@(courseForm: Form[Course])(course: Course)(instructor: User)(manager: User)
 @import helper._
 @import helper.twitterBootstrap._
 
 @main("Kurs"){
 	<meta charset="UTF-8">
-	<h1 align="center">Kurs</h1>
-	<div class="container col-md-offset-2 col-md-4">
-		<h2 align="center">Kurs</h2>
+	<div class="container col-md-offset-2 col-md-8">
 		@helper.form(action = routes.Courses.saveCourse(), 'enctype -> "multipart/form-data") {
 			<fieldset>
-				<legend>Kurs - @courseForm("name").valueOr("nowy") @courseForm("courseType").valueOr("")</legend>
-				@helper.inputText(courseForm("name"), '_label -> "Nazwa kursu")
-				@helper.inputText(courseForm("courseType"), '_label -> "Typ kursu")
-				@helper.textarea(courseForm("description"), '_label -> "Opis")
+				<legend><h1>@courseForm("name").valueOr("Nowy kurs") : @courseForm("courseType").valueOr("")</h1></legend>
+				<div class="col-md-6">
+					<div class="panel panel-default">
+						<div class="col-md-offset-1">
+							<h3>Dane podstawowe</h3>
+							@helper.inputText(courseForm("name"), '_label -> "Nazwa kursu", 'size -> 40)
+							@helper.inputText(courseForm("courseType"), '_label -> "Typ kursu", 'size -> 40)
+							@helper.textarea(courseForm("description"), '_label -> "Opis", 'size -> 40)
+						</div>
+					</div>
+					<div class="">
+					<span class="col-md-6 panel panel-default">
+							<table class="table table-default">
+								<thead>
+									<tr><h3>Daty spotkań @if(course.meetingDates.size == 0){ nieustalone }</h3></th>
+								</thead>
+								@if(course.meetingDates != null){
+								@for(dateString <- course.meetingDates) {
+									<tr>
+										<td>@dateString</td>
+									</tr>
+									}
+								}
+							</table>
+					
+						</span>
+						
+						<span class="col-md-6 panel panel-default">
+							<table class="table table-default">
+								<thead>
+									<tr><h3>Miejsca spotkań @if(course.places.size == 0){ nieustalone }</h3></th>
+								</thead>
+								@if(course.places != null){
+								@for(placeString <- course.places) {
+									<tr>
+										<td>@placeString</td>
+									</tr>
+									}
+								}
+							</table>
+					
+						</span>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="panel panel-default">
+						<div class="col-md-offset-1">
+							<h3>Odpowiedzialni za prowadzenie kursu</h3>
+							<h5><b>Instruktor : </b><br> @if(instructor != null){ instructor.firstName instructor.lastName } else{ Nie przydzielono instruktora! }</h5>
+							<h5><b>Kierownik : </b><br> @if(manager != null){ @manager.firstName @manager.lastName } else{ Nie przydzielono kierownika! }</h5>
+							
+							    
+							    
+							
+														
+						</div>
+					</div>
+				
+				</div>
+				
 				
 		
 			</fieldset>
 			<input type="submit" class="btn btn-primary" value="Save">
 		}
-	</div>
-	<div class="container col-md-4">
-		<h2 align="center">Niekursy</h2>
 	</div>
 	
 }
