--- a/app/views/courses/coursesList.scala.html
+++ b/app/views/courses/coursesList.scala.html
@@ -1,9 +1,13 @@
 @(courses: List[Course])
 @import helper._
 @import helper.twitterBootstrap._
+@import java.lang.String; var toDelete=""; var toDeleteName=""
 
 @main("Lista kursów"){
 <meta charset="UTF-8">
+
+	
+
 	<div class="container">
 		<h1 align="center">Lista kursów</h1>
 		<br>
@@ -27,7 +31,9 @@
 						&nbsp&nbsp
 						<a href="@routes.Courses.editCourse(course._id)">
 						<i class="glyphicon glyphicon-pencil"></i></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-						<a href="@routes.Courses.deleteCourse(course._id)">
+						@{toDelete = course._id}
+						@{toDeleteName = course.name}
+						<a data-toggle="modal" data-target="#confirmModal" data-course-id="@course._id" data-course-name="@course.name"> 
 						<i class="glyphicon glyphicon-remove"></i></a>
 					</td>
 				</tr>
@@ -37,6 +43,33 @@
 		<a href="@routes.Courses.newCourse()" class="btn btn-primary">
 		<i class="glyphicon glyphicon-plus"></i> Dodaj kurs</a>
 	</div>
+	
+	<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+	    <div class="modal-dialog">
+	        <div class="modal-content">
+	            <div class="modal-header">
+	            <h3 class="modal-title" id="myModalLabel">Ostrzeżenie o usunięciu kursu!</h3>
+	            </div>
+	            <div class="modal-body">
+	                <h5>Uwaga, usunięcie jest <b>nieodwracalne</b>!<br> Czy napewno chcesz <b>usunąć</b> kurs - <b id="courseToDelete"></b>?</h5>
+	            </div>
+	            <div class="modal-footer">
+	                <button type="button" class="btn btn-default" data-dismiss="modal">Anuluj</button>
+	                <a  id="deleteLink" href="#" class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i> Usuń kurs</a>
+	        </div>
+	    </div>
+	  </div>
+	</div>
+	
+	<script type="text/javascript">
+		$('#confirmModal').on('show.bs.modal', function(e) {
+			var courseName = $(e.relatedTarget).data('course-name');
+			var courseId = "/courses/delete/";
+		    courseId += $(e.relatedTarget).data('course-id');
+		    $(e.currentTarget).find('b[id="courseToDelete"]').text(courseName);
+		    $(e.currentTarget).find('a[id="deleteLink"]').attr("href", courseId);
+		});
+	</script>
 }
 
 
