--- a/app/views/users/usersList.scala.html
+++ b/app/views/users/usersList.scala.html
@@ -28,8 +28,7 @@
 						&nbsp&nbsp
 						<a href="@routes.Users.editUser(user._id)">
 						<i class="glyphicon glyphicon-pencil"></i></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-						
-						<a href="@routes.Users.deleteUser(user._id)">
+						<a data-toggle="modal" data-target="#confirmModal" data-user-id="@user._id" data-user-first-name="@user.firstName" data-user-last-name="@user.lastName">
 						<i class="glyphicon glyphicon-remove"></i></a>
 						
 					</td>
@@ -41,6 +40,34 @@
 			<i class="glyphicon glyphicon-plus"></i> Dodaj użytkownika
 		</a>
 	</div>
+    
+    <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+	    <div class="modal-dialog">
+	        <div class="modal-content">
+	            <div class="modal-header">
+	            <h3 class="modal-title" id="myModalLabel">Ostrzeżenie o usunięciu użytkownika!</h3>
+	            </div>
+	            <div class="modal-body">
+	                <h5>Uwaga, usunięcie jest <b>nieodwracalne</b>!<br> Czy napewno chcesz <b>usunąć</b> użytkownika - <b id="userToDelete" ></b>?</h5>
+	            </div>
+	            <div class="modal-footer">
+	                <button type="button" class="btn btn-default" data-dismiss="modal">Anuluj</button>
+	                <a  id="deleteLink" href="#" class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i> Usuń użytkownika</a>
+	        </div>
+	    </div>
+	  </div>
+	</div>
+	<script type="text/javascript">
+		$('#confirmModal').on('show.bs.modal', function(e) {
+			var userName = $(e.relatedTarget).data('user-first-name');
+			userName += " ";
+			userName += $(e.relatedTarget).data('user-last-name')
+			var userId = "/users/delete/";
+		    userId += $(e.relatedTarget).data('user-id');
+		    $(e.currentTarget).find('b[id="userToDelete"]').text(userName);
+		    $(e.currentTarget).find('a[id="deleteLink"]').attr("href", userId);
+		});
+	</script>
 }
 
 <!--  @@Author(name="Lukas Pecak") -->
